...
      content = { padding ->
        LazyColumn(
            modifier =
                Modifier.fillMaxSize()
                    .padding(padding)
                    .background(Color(MAIN_BACKGROUND))
                    .testTag("SignInScreenColumn"),
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center,
        ) {
          item {
            // App Logo
            Image(
                painter = painterResource(id = R.drawable.aptivity_logo_with_text),
                contentDescription = "App Logo",
                modifier = Modifier.size((2 * IMAGE_SIZE).dp).testTag("AppLogo"))
            Spacer(modifier = Modifier.height(LARGE_PADDING.dp))
          }

          item {
            // Email Input
            EmailTextField(
                email = emailState.value,
                onEmailChange = {
                  emailState.value = it
                  emailErrorState.value =
                      if (!isValidEmail(it)) "Please enter a valid address: example@mail.xx "
                      else null
...
                emailError = emailErrorState.value)
            Spacer(modifier = Modifier.height(MEDIUM_PADDING.dp))
          }

          item {
            // Password input
            PasswordTextField(
                password = passwordState.value,
                onPasswordChange = {
                  passwordState.value = it
                  passwordErrorState.value = if (it.isEmpty()) "Password cannot be empty" else null
                },
                isPasswordVisible = isPasswordVisible.value,
...
                              }
                            })
                      },
                      modifier =
                          Modifier.fillMaxWidth()
                              .height(AUTH_BUTTON_HEIGHT.dp)
                              .testTag("SignInButton"),
                      shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
                      colors =
                          ButtonDefaults.buttonColors(
                              containerColor = Color(MAIN_COLOR_DARK),
                              contentColor = Color.White)) {
                        Text("SIGN IN", fontSize = SUBTITLE_FONTSIZE.sp)
...
            Text("OR", fontSize = SUBTITLE_FONTSIZE.sp, fontWeight = FontWeight.Bold)
            Spacer(modifier = Modifier.height(MEDIUM_PADDING.dp))
          }

          item {
            // Google Sign-In Button
            GoogleSignInButton(
                onSignInClick = {
                  performOfflineAwareAction(
                      context = context,
                      networkManager = networkManager,
                      onPerform = {
                        googleSignInLauncher.launch(rememberGoogleSignInIntent(context, token))
...
                onClick = {
                  performOfflineAwareAction(
                      context = context,
                      networkManager = networkManager,
                      onPerform = { navigationActions.navigateTo(Screen.OVERVIEW) })
                },
                modifier = Modifier.testTag("ContinueAsGuestButton")) {
                  Text(
                      "Continue as a guest",
                      fontSize = SUBTITLE_FONTSIZE.sp,
                      color = Color(MAIN_COLOR_DARK))
                }
            Spacer(modifier = Modifier.height(EXTRA_LARGE_PADDING.dp))
...
                  onClick = {
                    performOfflineAwareAction(
                        context = context,
                        networkManager = networkManager,
                        onPerform = { navigationActions.navigateTo(Screen.SIGN_UP) })
                  },
                  modifier = Modifier.testTag("GoToSignUpButton")) {
                    Text("Sign Up", fontSize = SUBTITLE_FONTSIZE.sp, color = Color(MAIN_COLOR_DARK))
                  }
            }
          }
        }
      })
...
